# bazel-gazelle

./: .bazelrc  WORKSPACE  go.mod  go.sum
internal/: BUILD.bazel  go_repository_tools_srcs.bzl  list_repository_tools_srcs.go
language/: BUILD.bazel
language/rosetta/: BUILD.bazel  generate_test.go  lang.go
language/rosetta/internal/: BUILD.bazel
language/rosetta/internal/testdriver/: BUILD.bazel  main.go
language/rosetta/proto/: BUILD.bazel  rosetta_protocol.proto
language/rosetta/testdata/: BUILD.bazel
language/rosetta/testdata/helloworld/: BUILD.bazel  BUILD.want
